# cupy-som_oss

./: .gitignore  Readme.md  pyproject.toml
.github/workflows/: pull_requests.yaml
.helix/: languages.toml
docs/: conf.py  index.md
docs/api/: cupy_som.rst
src/cupy_som/: __init__.py  numeric.py  som.py
