[tool.poetry]
name = "cupy_som"
version = "0.1.1"
description = "Self-organizing maps using Cupy"
authors = ["Stefan Ulbrich"]
repository = "https://github.com/StefanUlbrich/cupy_som"
readme = "Readme.md"

classifiers = [
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.2"
cupy-cuda11x =  { version = "^12.2.0", optional = true }
# requires : sudo apt install  libgmp-dev .. maybe copy the source code for earth-movers-distance

[tool.poetry.extras]
cuda11x = ["cupy-cuda11x"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.285"
mypy = "^1.5.1"
black = "^23.7.0"


[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.0.3"
jupyter-black = "^0.3.4"
ipykernel = "^6.9.1"
matplotlib = "^3.8.0"
ipympl = "^0.9.3"


[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
pydata-sphinx-theme = "^0.14.1"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tools

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
namespace_packages = true
mypy_path = "src"
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = 'cupy.*'
ignore_missing_imports = true

[tool.black]
line-length = 120
target_version = ["py310"]

[tool.ruff]
line-length = 120
