[tool.poetry]
name = "cupy_som"
version = "0.1.1"
description = "Self-organizing maps using Cupy"
authors = ["Stefan Ulbrich"]
repository = "https://github.com/StefanUlbrich/cupy_som"
readme = "Readme.md"

classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.24.2"
# requires : sudo apt install  libgmp-dev .. maybe copy the source code for earth-movers-distance
scipy = "^1.11.3"
cupy-cuda11x = { version = "^12.2.0", optional = true }
cupy-cuda12x = { version = "^12.2.0", optional = true }

[tool.poetry.extras]
cuda11x = ["cupy-cuda11x"]
cuda12x = ["cupy-cuda12x"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.3"
mypy = "^1.6.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.0.3"
jupyter-black = "^0.3.4"
ipykernel = "^6.9.1"
matplotlib = "^3.8.0"
ipympl = "^0.9.3"
black = "^23.10.1"


[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
pydata-sphinx-theme = "^0.14.1"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"


[tool.poetry.group.lsp]
optional = true


[tool.poetry.group.lsp.dependencies]
python-lsp-server = { extras = ["rope"], version = "^1.8.2" }
python-lsp-ruff = "^1.6.0"
python-lsp-black = "^1.3.0"
pylsp-mypy = "^0.6.7"

[tool.poetry.scripts]
my_package_cli = 'my_package.console:run'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tools

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
namespace_packages = true
mypy_path = "src"
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = ['cupy.*', 'scipy.*']
ignore_missing_imports = true


[tool.black]
line-length = 120
target_version = ["py310"]

[tool.ruff]
line-length = 120

# [pylsp.plugins.ruff]
# executable = "poetry run ruff"

# install with `poetry self add 'poethepoet[poetry_plugin]'`
[tool.poe]
poetry_command = ""

[tool.poe.tasks]
lint = "ruff check --fix src"
types = "mypy -m cupy_som"
format = "poetry run ruff format src"
all = ["format", "lint", "types"]


[tool.poe.tasks.install-kernel]
cmd = "python -m ipykernel install --user --name cupy_som --display-name \"cupy_som (python3)\""
help = "Install the environment as a kernel"

[tool.poe.tasks.uninstall-kernel]
shell = """
    jupyter kernelspec uninstall cupy_som -y
    jupyter kernelspec list
"""
help = "Uninstall the kernel associated with this environment"

[tool.poe.tasks.list-kernels]
shell = """
    jupyter kernelspec uninstall cupy_som -y
    jupyter kernelspec list
"""
help = "List all kernels"
